--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "NLNOG RING"
 publishDir = "HTML"
 
-theme = "anubis"
+theme = "ring-anubis"
 paginate = 10
 
 disqusShortname = ""
